# md2svg-mcp

./: README.md  pyproject.toml  setup.py
docs/: deployment_guide.md
src/: md2svg_mcp.py
src/md2svg_mcp/: md2svg_mcp.py
