[project]
name = "md2svg-mcp"
version = "0.1.0"
description = "A tool convert markdown to svg"
readme = "README.md"
authors = [{ name = "Yossi-lee" }]
keywords = ["mcp", "markdown", "svg"]
requires-python = ">=3.11"
dependencies = ["fastmcp"]


[project.scripts]
your-mcp-service = "md2svg:main"

[project.urls]
Homepage = "https://github.com/yossi-lee/md2svg-mcp"
Issues = "https://github.com/yossi-lee/md2svg-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2svg_mcp"]
