[project]
name = "md2svg-mcp"
version = "0.1.6"
description = "A MCP server that converts Markdown text to SVG images."
readme = "README.md"
authors = [{ name = "Yossi-lee" }]
keywords = ["mcp", "markdown", "svg"]
requires-python = ">=3.11"
dependencies = ["fastmcp"]


[project.scripts]
md2svg-mcp = "md2svg_mcp.md2svg_mcp:main"


[project.urls]
Homepage = "https://github.com/yossi-lee/md2svg-mcp"
Issues = "https://github.com/yossi-lee/md2svg-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2svg_mcp"]
